--- a/week4/cyclotron-cars/cyclotron-cars-api/package.json
+++ b/week4/cyclotron-cars/cyclotron-cars-api/package.json
@@ -11,8 +11,13 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@prisma/client": "^5.15.1",
     "cors": "^2.8.5",
     "express": "^4.19.2",
+    "morgan": "^1.10.0",
     "nodemon": "^3.1.4"
+  },
+  "devDependencies": {
+    "prisma": "^5.15.1"
   }
 }
