--- a/week5/cyclotron-cars-auth-api/package.json
+++ b/week5/cyclotron-cars-auth-api/package.json
@@ -12,8 +12,10 @@
   "description": "",
   "dependencies": {
     "@prisma/client": "^5.15.1",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "express": "^4.19.2",
+    "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "nodemon": "^3.1.4"
   },
